Backend/MaintainMultipleCopiesParser.java
/* Generated By:JavaCC: Do not edit this line. MaintainMultipleCopiesParser.java */
import java.util.*;

public class MaintainMultipleCopiesParser implements MaintainMultipleCopiesParserConstants {
    static List<String[]> detectedTactics = new ArrayList<String[]>();

    static List<List<String>> interactionSequence = new ArrayList<List<String>>();

    public static void main(String args[]) throws ParseException {
        try {
            Scanner scanner = new Scanner(System.in);
            StringBuilder inputBuilder = new StringBuilder();

            while (scanner.hasNextLine()) {
                String line = scanner.nextLine();
                inputBuilder.append(line).append("\n");
            }
            scanner.close();

            String traceInput = inputBuilder.toString();
            MaintainMultipleCopiesParser parser = new MaintainMultipleCopiesParser(new java.io.StringReader(traceInput)); // Correction ici

            System.out.println("\n=====================================================================================");
            System.out.println("                      TACTIC DETECTION SYSTEM INITIALIZED  ");
            System.out.println("=====================================================================================\n");

            System.out.println("                      <----  Tactic structure ----> : ");
            System.out.println("\n TraceCacheClient:CacheClient --METHOD--> TraceCacheMgr:CacheMgr ");
            System.out.println(" TraceCacheMgr:CacheMgr --METHOD--> TraceCache:Cache ");
            System.out.println(" Optional Block : ");
            System.out.println(" TraceCacheMgr:CacheMgr --METHOD--> TraceRepository:Repository");
            System.out.println(" TraceCacheMgr:CacheMgr --METHOD --> TraceCache:Cache \n");


            parser.Start();
            int tacticCount = parser.detectMaintainMultipleCopies(); // Appel de la méthode de détection

            System.out.println("\n=====================================================================================");
            System.out.println(" Total Maintain Multiple Copies Tactic occurrences detected : " + tacticCount);
            System.out.println("=====================================================================================\n");

        } catch (Exception e) {
            System.out.println("Erreur de parsing : " + e.getMessage());
            e.printStackTrace();
        }
    }

    int detectMaintainMultipleCopies() {
    int tacticCount = 0; // Counter for detected tactics
    boolean check = true;
    boolean check1 = true;


    if (interactionSequence.size() < 2) {
        System.out.println("Not enough interactions for pattern detection (need at least 2).");
        return tacticCount;
    }

    for (int i = 0; i < interactionSequence.size() - 1; i++) {
        List<String> step1 = interactionSequence.get(i);
        List<String> step2 = interactionSequence.get(i + 1);

        String caller1 = step1.get(0), method1 = step1.get(1), callee1 = step1.get(2);
        String caller2 = step2.get(0), method2 = step2.get(1), callee2 = step2.get(2);
        check = true;

        if (i + 3 < interactionSequence.size()) {
             check = true;
            check1 = true;

            List<String> step3 = interactionSequence.get(i + 2);
            List<String> step4 = interactionSequence.get(i + 3);

            String caller3 = step3.get(0), method3 = step3.get(1), callee3 = step3.get(2);
            String caller4 = step4.get(0), method4 = step4.get(1), callee4 = step4.get(2);

            boolean extendedCondition1 = caller2.equals(caller3);
            boolean extendedCondition2 = caller3.equals(caller4);
            boolean extendedCondition3 = callee2.equals(callee4);
            boolean extendedCondition4 = !callee2.equals(callee3);
            boolean condition2 = !callee1.equals(callee2);
            boolean condition1 = !caller1.equals(caller2);
            boolean extendedCondition5 = !callee3.equals(callee4);
            boolean condition3 = callee1.equals(caller2);
            if (condition1 && condition2 && condition3 && extendedCondition1 && extendedCondition2 && extendedCondition3 && extendedCondition4 && extendedCondition5) {
                System.out.println("\n=====================================================================================");
                System.out.println("                      Tactic detected at line " + (i + 1));
                System.out.println("-------------------------------------------------------------------------------------");
                System.out.println((i+1) + " | " + caller1 + ":CacheClient -- " + method1 + " --> " + callee1 + ":CacheMgr");
                System.out.println((i + 2) + " | " + caller2 + ":CacheMgr -- " + method2 + " --> " + callee2 + ":Cache");
                System.out.println((i + 3) + " | " + caller3 + ":CacheMgr -- " + method3 + " --> " + callee3 + ":Repository");
                System.out.println((i + 4) + " | " + caller4 + ":CacheMgr -- " + method4 + " --> " + callee4 + ":Cache");
                System.out.println("=====================================================================================");

                tacticCount++; // Increment counter
                i = i + 3;
                continue;
            } else {
                System.out.println(" X ERROR! Unexpected CALLER Or CALLEE at event line  " + (i + 1));
                 System.out.println("-------------------------------------------------------------------------------------\n\n");
                check1=false;
            }
        }

        if (check || (i + 3 > interactionSequence.size())) {
            boolean condition1 = !caller1.equals(caller2);
            boolean condition2 = !callee1.equals(callee2);
            boolean condition3 = callee1.equals(caller2);

            if (condition1 && condition2 && condition3) {
                System.out.println("\n=====================================================================================");
                System.out.println("                      Tactic detected at line " +( i +1));
                System.out.println("-------------------------------------------------------------------------------------");
                System.out.println((i+1) + " | " + caller1 + ":CacheClient -- " + method1 + " --> " + callee1 + ":CacheMgr");
                System.out.println((i + 2) + " | " + caller2 + ":CacheMgr -- " + method2 + " --> " + callee2 + ":Cache");
                System.out.println("=====================================================================================");

                tacticCount++;
                i=i+1 ;
            }
            if ((!condition1 || !condition2)&& (check1=false) ) {
               System.out.println(" X ERROR! Unexpected CALLER Or CALLEE at event line  " + (i + 1));
               System.out.println("-------------------------------------------------------------------------------------\n\n");

            }

        }
    }

    return tacticCount; // Return the total number of detected tactics
}

  static final public void Start() throws ParseException {
     System.out.println("\n Analyzing trace...\n\n      ");
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case CALLER:
        ;
        break;
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
      MethodInvocation();
    }
  }

  static final public void MethodInvocation() throws ParseException {
  Token caller, method, callee;
    jj_consume_token(CALLER);
    caller = jj_consume_token(LITERAL);
    jj_consume_token(COMMA);
    jj_consume_token(METHOD);
    method = jj_consume_token(LITERAL);
    jj_consume_token(COMMA);
    jj_consume_token(CALLEE);
    callee = jj_consume_token(LITERAL);
    jj_consume_token(SEMICOLON);
        interactionSequence.add(Arrays.asList(caller.image, method.image, callee.image));
  }

  static private boolean jj_initialized_once = false;
  /** Generated Token Manager. */
  static public MaintainMultipleCopiesParserTokenManager token_source;
  static SimpleCharStream jj_input_stream;
  /** Current token. */
  static public Token token;
  /** Next token. */
  static public Token jj_nt;
  static private int jj_ntk;
  static private int jj_gen;
  static final private int[] jj_la1 = new int[1];
  static private int[] jj_la1_0;
  static {
      jj_la1_init_0();
   }
   private static void jj_la1_init_0() {
      jj_la1_0 = new int[] {0x20,};
   }

  /** Constructor with InputStream. */
  public MaintainMultipleCopiesParser(java.io.InputStream stream) {
     this(stream, null);
  }
  /** Constructor with InputStream and supplied encoding */
  public MaintainMultipleCopiesParser(java.io.InputStream stream, String encoding) {
    if (jj_initialized_once) {
      System.out.println("ERROR: Second call to constructor of static parser.  ");
      System.out.println("       You must either use ReInit() or set the JavaCC option STATIC to false");
      System.out.println("       during parser generation.");
      throw new Error();
    }
    jj_initialized_once = true;
    try { jj_input_stream = new SimpleCharStream(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source = new MaintainMultipleCopiesParserTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 1; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  static public void ReInit(java.io.InputStream stream) {
     ReInit(stream, null);
  }
  /** Reinitialise. */
  static public void ReInit(java.io.InputStream stream, String encoding) {
    try { jj_input_stream.ReInit(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 1; i++) jj_la1[i] = -1;
  }

  /** Constructor. */
  public MaintainMultipleCopiesParser(java.io.Reader stream) {
    if (jj_initialized_once) {
      System.out.println("ERROR: Second call to constructor of static parser. ");
      System.out.println("       You must either use ReInit() or set the JavaCC option STATIC to false");
      System.out.println("       during parser generation.");
      throw new Error();
    }
    jj_initialized_once = true;
    jj_input_stream = new SimpleCharStream(stream, 1, 1);
    token_source = new MaintainMultipleCopiesParserTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 1; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  static public void ReInit(java.io.Reader stream) {
    jj_input_stream.ReInit(stream, 1, 1);
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 1; i++) jj_la1[i] = -1;
  }

  /** Constructor with generated Token Manager. */
  public MaintainMultipleCopiesParser(MaintainMultipleCopiesParserTokenManager tm) {
    if (jj_initialized_once) {
      System.out.println("ERROR: Second call to constructor of static parser. ");
      System.out.println("       You must either use ReInit() or set the JavaCC option STATIC to false");
      System.out.println("       during parser generation.");
      throw new Error();
    }
    jj_initialized_once = true;
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 1; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  public void ReInit(MaintainMultipleCopiesParserTokenManager tm) {
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 1; i++) jj_la1[i] = -1;
  }

  static private Token jj_consume_token(int kind) throws ParseException {
    Token oldToken;
    if ((oldToken = token).next != null) token = token.next;
    else token = token.next = token_source.getNextToken();
    jj_ntk = -1;
    if (token.kind == kind) {
      jj_gen++;
      return token;
    }
    token = oldToken;
    jj_kind = kind;
    throw generateParseException();
  }


/** Get the next Token. */
  static final public Token getNextToken() {
    if (token.next != null) token = token.next;
    else token = token.next = token_source.getNextToken();
    jj_ntk = -1;
    jj_gen++;
    return token;
  }

/** Get the specific Token. */
  static final public Token getToken(int index) {
    Token t = token;
    for (int i = 0; i < index; i++) {
      if (t.next != null) t = t.next;
      else t = t.next = token_source.getNextToken();
    }
    return t;
  }

  static private int jj_ntk() {
    if ((jj_nt=token.next) == null)
      return (jj_ntk = (token.next=token_source.getNextToken()).kind);
    else
      return (jj_ntk = jj_nt.kind);
  }

  static private java.util.List jj_expentries = new java.util.ArrayList();
  static private int[] jj_expentry;
  static private int jj_kind = -1;

  /** Generate ParseException. */
  static public ParseException generateParseException() {
    jj_expentries.clear();
    boolean[] la1tokens = new boolean[11];
    if (jj_kind >= 0) {
      la1tokens[jj_kind] = true;
      jj_kind = -1;
    }
    for (int i = 0; i < 1; i++) {
      if (jj_la1[i] == jj_gen) {
        for (int j = 0; j < 32; j++) {
          if ((jj_la1_0[i] & (1<<j)) != 0) {
            la1tokens[j] = true;
          }
        }
      }
    }
    for (int i = 0; i < 11; i++) {
      if (la1tokens[i]) {
        jj_expentry = new int[1];
        jj_expentry[0] = i;
        jj_expentries.add(jj_expentry);
      }
    }
    int[][] exptokseq = new int[jj_expentries.size()][];
    for (int i = 0; i < jj_expentries.size(); i++) {
      exptokseq[i] = (int[])jj_expentries.get(i);
    }
    return new ParseException(token, exptokseq, tokenImage);
  }

  /** Enable tracing. */
  static final public void enable_tracing() {
  }

  /** Disable tracing. */
  static final public void disable_tracing() {
  }

}
